Fix alignment of business grid filter forms on mobile

--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -645,6 +645,10 @@
     padding: 20px;
   }
 
+  .shop-search-box {
+    width: 100%;
+  }
+
   @media screen and (max-width: 767px) {
     .hero-with-background-wrap.hero2-wrap {
       padding-right: 20px;
